Cleanup text block